--- a/style.css
+++ b/style.css
@@ -47,3 +47,32 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+body {
+    background-color: #3f7cac;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header {
+    border: 1px solid red;
+    width: 700px;
+    text-align: center;
+    padding: 20px;
+}
+
+h1 {
+    font-size: 6rem;
+}
+
+#city-search-form input[type='text'] {
+    width: 200px;
+    height: 20px;
+}
+
+#city-search-form input[type='submit'] {
+    width: 65px;
+    font-size: 1rem;
+    display: inline-block;
+}
